# agent-git

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/agents/: README.md
.claude/memory/: MEMORY.md
.claude/skills/: README.md
.claude/skills/agentgit-feature-workflow/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: AGENTS.md  package.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/config/: config.module.ts  env.ts
apps/api/src/detect/: tree.service.ts
apps/api/test/: app-auth.test.ts  tree.test.ts  webhooks.test.ts
apps/web/: AGENTS.md  middleware.ts  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/lib/: api.ts
changes/: 2026-07-06-backend-stack-decision.md  2026-07-06-event-bus-nats.md  2026-07-06-foundational-decisions.md  2026-07-06-open-core-self-host.md  2026-07-06-repo-scaffold.md  2026-07-06-ts-rest-over-trpc.md  README.md
docs/: architecture.md  decisions.md  glossary.md  spec.md
docs/conventions/: README.md  api-and-versioning.md  auth.md  backend-structure.md  data-model.md  events.md  frontend-routing.md  local-dev.md  security.md  worktrees.md
features/: README.md
features/F1-github-connect/: PLAN.md  README.md
features/F2-agent-detection/: PLAN.md  README.md
services/eval-sandbox/: AGENTS.md  pyproject.toml
sprints/: README.md
sprints/sprint-01/: PRD.md  README.md
(+17 files in other folders)
